[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprites/background.png" type="Texture" id=1]
[ext_resource path="res://sprites/button_pressed.png" type="Texture" id=2]
[ext_resource path="res://sprites/button_selected.png" type="Texture" id=3]
[ext_resource path="res://sprites/button.png" type="Texture" id=4]
[ext_resource path="res://themes/basic.tres" type="Theme" id=5]
[ext_resource path="res://scripts/lobby_controller.gd" type="Script" id=6]
[ext_resource path="res://sounds/select.ogg" type="AudioStream" id=7]

[node name="Lobby" type="Node"]
script = ExtResource( 6 )

[node name="Deco" type="Node2D" parent="."]

[node name="Background" type="Node2D" parent="Deco"]

[node name="Sprite" type="Sprite" parent="Deco/Background"]
position = Vector2( 640, 360 )
scale = Vector2( 10.667, 10.667 )
texture = ExtResource( 1 )

[node name="UI" type="Control" parent="."]
margin_left = 13.0
margin_top = 51.0
margin_right = 1269.0
margin_bottom = 670.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopText" type="Label" parent="UI"]
margin_left = -18.0
margin_right = 1268.0
margin_bottom = 202.0
theme = ExtResource( 5 )
text = "Choose your role"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cancel" type="Control" parent="UI"]
margin_left = -300.0
margin_top = -265.0
margin_right = -260.0
margin_bottom = -225.0
rect_scale = Vector2( 0.8, 0.8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureButton" parent="UI/Cancel"]
margin_left = 428.0
margin_top = 380.0
margin_right = 524.0
margin_bottom = 412.0
rect_scale = Vector2( 4, 4 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="UI/Cancel"]
margin_left = -21.0
margin_top = 379.0
margin_right = 1271.0
margin_bottom = 509.0
theme = ExtResource( 5 )
text = "Cancel"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChooseMenu" type="Control" parent="UI"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Client" type="Control" parent="UI/ChooseMenu"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureButton" parent="UI/ChooseMenu/Client"]
margin_left = 428.0
margin_top = 380.0
margin_right = 524.0
margin_bottom = 412.0
rect_scale = Vector2( 4, 4 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="UI/ChooseMenu/Client"]
margin_left = -21.0
margin_top = 379.0
margin_right = 1271.0
margin_bottom = 509.0
theme = ExtResource( 5 )
text = "Client"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Host" type="Control" parent="UI/ChooseMenu"]
margin_top = -200.0
margin_right = 40.0
margin_bottom = -160.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureButton" parent="UI/ChooseMenu/Host"]
margin_left = 428.0
margin_top = 380.0
margin_right = 524.0
margin_bottom = 412.0
rect_scale = Vector2( 4, 4 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="UI/ChooseMenu/Host"]
margin_left = -21.0
margin_top = 379.0
margin_right = 1271.0
margin_bottom = 509.0
theme = ExtResource( 5 )
text = "Host (Server)"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostMenu" type="Control" parent="UI"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/HostMenu"]
margin_left = -13.0
margin_top = -57.0
margin_right = 1264.0
margin_bottom = 673.0
theme = ExtResource( 5 )
text = "Waiting for other player.."
align = 1
valign = 1

[node name="ClientMenu" type="Control" parent="UI"]
margin_left = 627.0
margin_top = 309.0
margin_right = 667.0
margin_bottom = 349.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[connection signal="mouse_entered" from="UI/Cancel/Button" to="." method="selected_button"]
[connection signal="pressed" from="UI/Cancel/Button" to="." method="cancel_game"]
[connection signal="mouse_entered" from="UI/ChooseMenu/Client/Button" to="." method="selected_button"]
[connection signal="pressed" from="UI/ChooseMenu/Client/Button" to="." method="menu_as_client"]
[connection signal="mouse_entered" from="UI/ChooseMenu/Host/Button" to="." method="selected_button"]
[connection signal="pressed" from="UI/ChooseMenu/Host/Button" to="." method="menu_as_host"]
